v1.251.0: the contributor persona + day docs truth (#380)
- First contributor on-ramp pass: fresh clone → CONTRIBUTING's
  verbatim command → assembled app in 21s, zero friction
- CLAUDE.md's five fossil JDK-17 Troubleshooting claims corrected to
  the Java 21 baseline (incl. JAVA_HOME recipes)
- plan.md day-shift addendum for v1.248–v1.250; docs only

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>